--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo-google-fonts/roboto": "^0.1.0",
     "@react-native-async-storage/async-storage": "^1.15.1",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/native": "^5.9.3",
     "@react-navigation/stack": "^5.14.3",
     "expo": "~40.0.0",
+    "expo-app-loading": "^1.0.3",
+    "expo-font": "~8.4.0",
     "expo-status-bar": "~1.0.3",
     "expo-updates": "~0.4.1",
     "react": "16.13.1",
@@ -29,7 +32,9 @@
     "styled-components": "^5.2.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0"
+    "@babel/core": "^7.9.0",
+    "@types/styled-components": "^5.1.9",
+    "@types/styled-components-react-native": "^5.1.1"
   },
   "private": true
 }
